# Twitter-Feed-Analysis

./: .gitignore  Procfile  README.md  app.py  config.py  config_flask.py  dump.rdb  pyproject.toml  requirements.txt  twitter_mvp.py  worker.py
api/: __init__.py  core.py
api/helpers/: task_helpers.py
api/models/: TaskProfile.py  UserProfile.py  __init__.py
api/tasks/: analyze_profile.py
api/tasks/twitter_analysis/: analyze_profile.py
api/utils/: constants.py  scripts.py
api/views/: main.py
api/views/app_blueprint/: routes.py
api/views/auth/: __init__.py  routes.py
api/views/main/: routes.py
backend/: .gitignore  README.md  config.py  config_flask.py  pyproject.toml
backend/api/: __init__.py  core.py
backend/api/helpers/: task_helpers.py
backend/api/models/: TaskProfile.py  __init__.py
backend/api/tasks/twitter_analysis/: analyze_profile.py
backend/api/utils/: constants.py
backend/api/views/: app_blueprint.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: AnalysisContributors.css  AnalysisContributors.tsx  AnalysisHeader.tsx  AnalysisHistogram.tsx  AnalysisTopTweets.css  AnalysisTopTweets.tsx  AnalysisWeek.tsx  CircularProgressWithLabel.tsx
frontend/src/hooks/: useLocalStorage.tsx
frontend/src/types/: analysisInterface.tsx
frontend/src/utils/: constants.tsx
frontend/src/views/: AboutPage.css  AboutPage.tsx  AnalysisPage.css  AnalysisPage.tsx  AuthPage.tsx  Layout.tsx  LoadingPage.css  LoadingPage.tsx  authPage.css  authPage.tsx
(+4 files in other folders)
